components/Text.module.css
.root:not(:first-child) {
  margin-block-start: var(--spacing-y);
}

.header {
  margin-block-end: 2rem;

  & h2 {
    margin-block-end: 0.25em;
  }

  & p {
    font-size: clamp(1.125rem, 1.05rem + 0.25vw, 1.25rem);
    font-weight: 500;
  }
}

.text {
  & > a:not(:empty + a) {
    margin-block-start: 2rem;
  }
}

